# vesh-agents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  opencode.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
.opencode/agents/: analyst.md  explorer.md
examples/: csv_analysis.py  quickstart.py  sample_data.csv  stripe_analysis.py
launch/: LAUNCH_PLAN.md  hackernews.md  reddit_localllama.md  reddit_machinelearning.md  reddit_python.md  reddit_saas.md  twitter_thread.md
tests/: test_connectors.py  test_detection.py  test_isolation_forest.py  test_metrics.py  test_ontology.py  test_resolution.py
vesh_agents/: __init__.py
vesh_agents/agents/: __init__.py  connector.py  detector.py  metric.py  orchestrator.py  reasoner.py  resolver.py
vesh_agents/cli/: main.py  opencode.py
vesh_agents/connectors/: __init__.py  base.py  csv.py  postgres.py  stripe.py
vesh_agents/core/: metering.py  tracing.py  vertical.py
vesh_agents/detection/: __init__.py  decomposition.py  isolation_forest.py  statistical.py
vesh_agents/mcp/: server.py
vesh_agents/metrics/: __init__.py  computation.py  ontology.py  validation.py
vesh_agents/output/: console.py  json_out.py
vesh_agents/resolution/: __init__.py  blocking.py  canonical.py  clustering.py  scoring.py
vesh_agents/tools/: connectors.py  detection.py  metrics.py  reasoning.py  resolution.py
vesh_agents/verticals/revenue/: __init__.py  agents.py  metrics.py  prompts.py
