[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vesh-agents"
version = "0.1.0"
description = "Open-source agentic framework for revenue intelligence. 6 AI agents that extract, resolve, compute, detect, and explain your business data."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Vesh AI", email = "hello@vesh.ai" }]
keywords = [
    "agentic-ai",
    "revenue-intelligence",
    "saas-metrics",
    "openai-agents",
    "mcp",
    "entity-resolution",
    "anomaly-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai-agents>=0.9.0",
    "litellm",
    "httpx>=0.27",
    "rapidfuzz>=3.0",
    "numpy>=1.26",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
stripe = ["stripe>=8.0"]
postgres = ["psycopg[binary]>=3.1"]
all = ["vesh-agents[stripe,postgres]"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
vesh = "vesh_agents.cli.main:cli"

[project.urls]
Homepage = "https://github.com/shailesht003/vesh-agents"
Repository = "https://github.com/shailesht003/vesh-agents"
Documentation = "https://github.com/shailesht003/vesh-agents#readme"
Issues = "https://github.com/shailesht003/vesh-agents/issues"
Changelog = "https://github.com/shailesht003/vesh-agents/releases"

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
